src/test/resources/type/good/append-3.ml
x = []

x.append(1)
y = x