src/test/resources/type/bad/append-2.ml

x = [1,2,3]
x.append(3.4)